<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#800080" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColor="#800080">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/chss_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_id"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="#800080" />

        <EditText
            android:id="@+id/DOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:digits="0123456789/"
            android:inputType="date"
            android:textColor="#800080" />

        <EditText
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/patient_age"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="3"
            android:textColor="#800080" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#800080" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#800080" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height_cm"
                android:textColor="#800080" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#800080" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight_kg"
                android:textColor="#800080" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtMedication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/medications"
            android:inputType="text"
            android:textColor="#800080" />

        <EditText
            android:id="@+id/txtBP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="0123456789/"
            android:hint="@string/blood_pressure"
            android:inputType="date"
            android:maxLength="15"
            android:textColor="#800080" />

        <EditText
            android:id="@+id/txtComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comments"
            android:inputType="text"
            android:textColor="#800080" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="Save"
                android:textColor="#800080" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:text="Clear"
                android:textColor="#800080" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:text="Cancel"
                android:textColor="#800080" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>